--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,13 @@
 platform = espressif32
 board = adafruit_feather_esp32s3
 framework = arduino
-lib_deps = 
-	https://github.com/Xander-Electronics/Base64.git
-	adafruit/Adafruit PWM Servo Driver Library@^3.0.1
-	adafruit/Adafruit BusIO@^1.15.0
-	bblanchon/ArduinoJson@^6.21.3
-	h2zero/NimBLE-Arduino@^1.4.1
+lib_deps =
+  h2zero/NimBLE-Arduino@^1.4.1
+  bblanchon/ArduinoJson@^6.21.3
+  adafruit/Adafruit PWM Servo Driver Library@^3.0.1
+  adafruit/Adafruit BusIO@^1.15.0
+  https://github.com/Xander-Electronics/Base64.git
+  adafruit/Adafruit MPU6050@^2.2.5
+  https://github.com/arduino-libraries/MadgwickAHRS.git
+  https://github.com/sparkfun/SparkFun_ICM-20948_ArduinoLibrary.git
+
