--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,27 @@
 
 [env:adafruit_feather_esp32s3]
 platform = espressif32
-board = adafruit_feather_esp32s3
+board = freenove_esp32_s3_wroom
 framework = arduino
+; keep everything slow + simple until it uploads once
+upload_protocol = esptool
+upload_speed    = 115200
+board_upload.use_1200bps_touch = no
+
+monitor_speed = 115200
+
+build_flags =
+  -DARDUINO_USB_CDC_ON_BOOT=1
+  -DARDUINO_USB_MODE=1
+
+; set these explicitly (helpful on some S3 boards)
+board_build.flash_mode = dio
+board_build.f_flash    = 80000000L   ; 80MHz is standard on S3 WROOM
+
+upload_port  = /dev/cu.usbmodem58760785201
+monitor_port = /dev/cu.usbmodem58760785201
+
+
 lib_deps =
   h2zero/NimBLE-Arduino@^1.4.1
   bblanchon/ArduinoJson@^6.21.3
