upload issuesfixed driver installed

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,8 +27,8 @@ build_flags =
 board_build.flash_mode = dio
 board_build.f_flash    = 80000000L   ; 80MHz is standard on S3 WROOM
 
-upload_port  = /dev/cu.usbmodem58760785201
-monitor_port = /dev/cu.usbmodem58760785201
+; upload_port  = /dev/cu.usbmodem58760785201
+; monitor_port = /dev/cu.usbmodem58760785201
 
 
 lib_deps =
