--- a/platformio.ini
+++ b/platformio.ini
@@ -1,17 +1,8 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:adafruit_feather_esp32s3]
 platform = espressif32
 board = freenove_esp32_s3_wroom
 framework = arduino
+
 ; keep everything slow + simple until it uploads once
 upload_protocol = esptool
 upload_speed    = 115200
@@ -22,14 +13,15 @@ monitor_speed = 115200
 build_flags =
   -DARDUINO_USB_CDC_ON_BOOT=1
   -DARDUINO_USB_MODE=1
+  -DIMU_SENSOR_MPU6050        ; <-- pick ONE sensor here
+  ;-DSERIAL_DEBUG=1           ; (optional) verbose serial logs from BLE/router
 
 ; set these explicitly (helpful on some S3 boards)
 board_build.flash_mode = dio
 board_build.f_flash    = 80000000L   ; 80MHz is standard on S3 WROOM
 
-; upload_port  = /dev/cu.usbmodem58760785201
-; monitor_port = /dev/cu.usbmodem58760785201
-
+; upload_port  = /dev/cu.usbmodemXXXX
+; monitor_port = /dev/cu.usbmodemXXXX
 
 lib_deps =
   h2zero/NimBLE-Arduino@^1.4.1
@@ -39,5 +31,5 @@ lib_deps =
   https://github.com/Xander-Electronics/Base64.git
   adafruit/Adafruit MPU6050@^2.2.5
   https://github.com/arduino-libraries/MadgwickAHRS.git
+  ; If you are NOT using ICM-20948, you can comment/remove the next line:
   https://github.com/sparkfun/SparkFun_ICM-20948_ArduinoLibrary.git
-
