--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,8 @@ board_upload.use_1200bps_touch = no
 monitor_speed = 115200
 
 build_flags =
-  -DARDUINO_USB_CDC_ON_BOOT=1
-  -DARDUINO_USB_MODE=1
+  ; -DARDUINO_USB_CDC_ON_BOOT=1
+  ; -DARDUINO_USB_MODE=1
   -DIMU_SENSOR_MPU6050        ; <-- pick ONE sensor here
   ;-DSERIAL_DEBUG=1           ; (optional) verbose serial logs from BLE/router
 
