--- a/platformio.ini
+++ b/platformio.ini
@@ -1,25 +1,28 @@
 [env:adafruit_feather_esp32s3]
 platform = espressif32
-board = adafruit_feather_esp32s3
+board = freenove_esp32_s3_wroom
 framework = arduino
 
+; Upload/Monitor
 upload_protocol = esptool
 upload_speed    = 115200
 board_upload.use_1200bps_touch = no
-
 monitor_speed = 115200
 
+; Build flags:
+; - Use GPIO 8/9 for shared I2C (PCA9685 + MPU6050)
+; - Enable optional IMU_DEBUG if you later re-enable IMU task printing
 build_flags =
-  -DARDUINO_USB_CDC_ON_BOOT=1
-  -DARDUINO_USB_MODE=1
   -DIMU_SENSOR_MPU6050
-  -DIMU_SDA_PIN=19
-  -DIMU_SCL_PIN=20
-  -DIMU_DEBUG
+  -DIMU_SDA_PIN=8
+  -DIMU_SCL_PIN=9
+  ; -DIMU_DEBUG
 
+; Flash settings (stable defaults)
 board_build.flash_mode = dio
 board_build.f_flash    = 80000000L
 
+; Libraries
 lib_deps =
   h2zero/NimBLE-Arduino@^1.4.3
   bblanchon/ArduinoJson@^6.21.3
