MPU test successful

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,13 +10,17 @@ board_upload.use_1200bps_touch = no
 monitor_speed = 115200
 
 ; Build flags:
-; - Use GPIO 8/9 for shared I2C (PCA9685 + MPU6050)
-; - Enable optional IMU_DEBUG if you later re-enable IMU task printing
+; - Dual I2C bus configuration for stability
+; - Wire  (GPIO 8/9):  PCA9685 servos at 100kHz
+; - Wire1 (GPIO 19/20): MPU6050 IMU at 400kHz
+; - Enable optional IMU_DEBUG for detailed logging
 build_flags =
   -DIMU_SENSOR_MPU6050
-  -DIMU_SDA_PIN=8
-  -DIMU_SCL_PIN=9
-  ; -DIMU_DEBUG
+  -DIMU_SDA_PIN=19
+  -DIMU_SCL_PIN=20
+  -DSERVO_SDA_PIN=8
+  -DSERVO_SCL_PIN=9
+  -DIMU_DEBUG
 
 ; Flash settings (stable defaults)
 board_build.flash_mode = dio
