--- a/platformio.ini
+++ b/platformio.ini
@@ -1,25 +1,28 @@
+; PlatformIO Project Configuration File
+; Robo Rex - PCA9685 Servo Control Configuration
+; ESP32-S3 Freenove WROOM board
+
 [env:adafruit_feather_esp32s3]
 platform = espressif32
 board = freenove_esp32_s3_wroom
 framework = arduino
 
-; Upload/Monitor
+; Upload settings
 upload_protocol = esptool
 upload_speed    = 115200
 board_upload.use_1200bps_touch = no
+
+; Serial monitor
 monitor_speed = 115200
 
 ; Build flags:
-; - Dual I2C bus configuration for stability
-; - Wire  (GPIO 8/9):  PCA9685 servos at 100kHz
-; - Wire1 (GPIO 19/20): MPU6050 IMU at 400kHz
+; - Single I2C bus configuration (Wire on GPIO 8/9)
+; - All devices (PCA9685 + MPU6050) on same I2C bus at 100kHz
 ; - Enable optional IMU_DEBUG for detailed logging
 build_flags =
   -DIMU_SENSOR_MPU6050
-  -DIMU_SDA_PIN=19
-  -DIMU_SCL_PIN=20
-  -DSERVO_SDA_PIN=8
-  -DSERVO_SCL_PIN=9
+  -DI2C_SDA_PIN=8
+  -DI2C_SCL_PIN=9
   -DIMU_DEBUG
 
 ; Flash settings (stable defaults)
@@ -28,10 +31,23 @@ board_build.f_flash    = 80000000L
 
 ; Libraries
 lib_deps =
+  ; BLE communication
   h2zero/NimBLE-Arduino@^1.4.3
+  
+  ; JSON parsing (if needed)
   bblanchon/ArduinoJson@^6.21.3
+  
+  ; PCA9685 servo driver (REQUIRED)
   adafruit/Adafruit PWM Servo Driver Library@^3.0.1
   adafruit/Adafruit BusIO@^1.15.0
-  https://github.com/Xander-Electronics/Base64.git
+  
+  ; IMU sensor (optional)
   adafruit/Adafruit MPU6050@^2.2.5
+  
+  ; Sensor fusion (optional)
   https://github.com/arduino-libraries/MadgwickAHRS.git
+  
+  ; Base64 encoding (if needed)
+  https://github.com/Xander-Electronics/Base64.git
+
+; NOTE: ESP32Servo library REMOVED - no longer needed with PCA9685
