--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 ; PlatformIO Project Configuration File
-; Robo Rex - PCA9685 Servo Control Configuration
+; Robo Rex - ESP32-S3 GPIO Servo Control Configuration
 ; ESP32-S3 Freenove WROOM board
 
 [env:adafruit_feather_esp32s3]
@@ -16,13 +16,14 @@ board_upload.use_1200bps_touch = no
 monitor_speed = 115200
 
 ; Build flags:
-; - Single I2C bus configuration (Wire on GPIO 8/9)
-; - All devices (PCA9685 + MPU6050) on same I2C bus at 100kHz
+; - Dual I2C bus configuration
+;   * Wire1 on GPIO 8/9 for IMU (MPU6050) at 400kHz
+;   * Servos use direct GPIO pins (no I2C needed)
 ; - Enable optional IMU_DEBUG for detailed logging
 build_flags =
   -DIMU_SENSOR_MPU6050
-  -DI2C_SDA_PIN=8
-  -DI2C_SCL_PIN=9
+  -DIMU_SDA_PIN=8
+  -DIMU_SCL_PIN=9
   -DIMU_DEBUG
 
 ; Flash settings (stable defaults)
@@ -37,12 +38,12 @@ lib_deps =
   ; JSON parsing (if needed)
   bblanchon/ArduinoJson@^6.21.3
   
-  ; PCA9685 servo driver (REQUIRED)
-  adafruit/Adafruit PWM Servo Driver Library@^3.0.1
-  adafruit/Adafruit BusIO@^1.15.0
+  ; ESP32 Servo Library for direct GPIO control (REQUIRED)
+  madhephaestus/ESP32Servo@^3.0.5
   
   ; IMU sensor (optional)
   adafruit/Adafruit MPU6050@^2.2.5
+  adafruit/Adafruit BusIO@^1.15.0
   
   ; Sensor fusion (optional)
   https://github.com/arduino-libraries/MadgwickAHRS.git
@@ -50,4 +51,5 @@ lib_deps =
   ; Base64 encoding (if needed)
   https://github.com/Xander-Electronics/Base64.git
 
-; NOTE: ESP32Servo library REMOVED - no longer needed with PCA9685
+; NOTE: PCA9685 library REMOVED - switching to direct GPIO control
+; NOTE: Adafruit PWM Servo Driver Library no longer needed
