Clarify env selection for CH34x uploads

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,46 +1,26 @@
-; PlatformIO Project Configuration File
-; Robo Rex - ESP32-S3 Hybrid Servo Control Configuration
-; ESP32-S3 Freenove WROOM board - OTG/USB PORT CONFIGURATION
-; Hybrid Mode: GPIO for channels 0-5, PCA9685 for channels 6-15 (legs)
+[platformio]
+; Select which USB path you are using by default.
+; - freenove_esp32_s3_otg  : native USB-CDC via OTG port (requires ARDUINO_USB_* flags)
+; - freenove_esp32_s3_uart : external CH34x USB-UART bridge (no ARDUINO_USB_* flags)
+; macOS port names: OTG → /dev/cu.usbmodem* | CH34x → /dev/cu.wchusbserial*
+; If your upload log shows `/dev/cu.wchusbserial*`, set the default to the UART env below.
+default_envs = freenove_esp32_s3_uart
 
-[env:freenove_esp32_s3_wroom]
+; Common settings shared by both USB paths
+[env]
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
-
-; Upload settings
 upload_protocol = esptool
 upload_speed = 460800
-board_upload.use_1200bps_touch = no
-
-; Serial monitor
 monitor_speed = 115200
 monitor_rts = 0
 monitor_dtr = 0
-
-; Build flags:
-; - USING OTG/USB PORT (native ESP32-S3 USB-CDC)
-; - REQUIRES ARDUINO_USB_CDC_ON_BOOT and ARDUINO_USB_MODE flags
-; - Device will appear as /dev/tty.usbmodem* on macOS (NOT wchusbserial)
-; - Dual I2C bus configuration
-;   * Wire (default) for PCA9685 at 100kHz (SDA=4, SCL=5)
-;   * Wire1 for IMU (MPU6050) at 400kHz (SDA=8, SCL=9)
-; - Hybrid servo control: GPIO for body, PCA9685 for legs
-build_flags =
-  -DARDUINO_USB_CDC_ON_BOOT=1
-  -DARDUINO_USB_MODE=1
-  -DIMU_SENSOR_MPU6050
-  -DIMU_SDA_PIN=8
-  -DIMU_SCL_PIN=9
-  ; -DIMU_DEBUG
-  -DPCA9685_SDA_PIN=4
-  -DPCA9685_SCL_PIN=5
-
-; Flash settings (stable defaults)
+board_upload.use_1200bps_touch = no
 board_build.flash_mode = dio
 board_build.f_flash    = 80000000L
 
-; Libraries
+; Library set used by both environments
 lib_deps =
   ; JSON parsing (if needed)
   bblanchon/ArduinoJson@^6.21.3
@@ -61,6 +41,27 @@ lib_deps =
   ; Base64 encoding (if needed)
   https://github.com/Xander-Electronics/Base64.git
 
-; Hybrid Servo Configuration:
-; - Channels 0-5 (Neck, Head, Pelvis, Spine, Tail): ESP32 GPIO direct control
-; - Channels 6-15 (Legs - 10 servos): PCA9685 I2C PWM driver
+; --- Environment: OTG / native USB-CDC port ---
+; Use this when you plug into the ESP32-S3 OTG port (device usually shows up as /dev/tty.usbmodem* on macOS).
+[env:freenove_esp32_s3_otg]
+build_flags =
+  -DARDUINO_USB_CDC_ON_BOOT=1
+  -DARDUINO_USB_MODE=1
+  -DIMU_SENSOR_MPU6050
+  -DIMU_SDA_PIN=8
+  -DIMU_SCL_PIN=9
+  ; -DIMU_DEBUG
+  -DPCA9685_SDA_PIN=4
+  -DPCA9685_SCL_PIN=5
+
+; --- Environment: UART / CH34x bridge ---
+; Use this when you plug into the CH343/CH340 USB-UART port (device usually shows up as /dev/tty.wchusbserial* on macOS).
+; IMPORTANT: No ARDUINO_USB_* flags here, this uses the classic UART0 path.
+[env:freenove_esp32_s3_uart]
+build_flags =
+  -DIMU_SENSOR_MPU6050
+  -DIMU_SDA_PIN=8
+  -DIMU_SCL_PIN=9
+  ; -DIMU_DEBUG
+  -DPCA9685_SDA_PIN=4
+  -DPCA9685_SCL_PIN=5
